# uv-dynamic-versioning

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
docs/: metadata_hook.md  tips.md  version_source.md
example/: README.md  pyproject.toml
example/src/example/: __init__.py
examples/metadata-hook/: README.md  pyproject.toml
examples/metadata-hook/child-project/: .gitignore  README.md  pyproject.toml
examples/version-source/: README.md  pyproject.toml
src/uv_dynamic_versioning/: base.py  build_hook.py  cli.py  hooks.py  jinja.py  main.py  metadata_hook.py  monkeypatch.py  schemas.py  template.py  version_source.py
tests/: conftest.py  test_build_hook.py  test_env_bypass.py  test_jinja.py  test_main.py  test_metadata_hook.py  test_schemas.py  test_template.py  test_version_source.py  utils.py
tests/fixtures/with-bump/: pyproject.toml
tests/fixtures/with-bump-and-format/: pyproject.toml
tests/fixtures/with-dirty/: pyproject.toml
tests/fixtures/with-format/: pyproject.toml
tests/fixtures/with-from-file/: pyproject.toml
tests/fixtures/with-highest-tag/: pyproject.toml
tests/fixtures/with-jinja-format/: pyproject.toml
tests/fixtures/with-pattern/: pyproject.toml
tests/fixtures/with-pep440/: pyproject.toml
tests/fixtures/with-semver/: pyproject.toml
