[project]
name = "metadata-hook"
dynamic = ["version", "dependencies"]
description = "An example project for uv-dynamic-versioning (version source + metadata hook)"
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata.hooks.uv-dynamic-versioning]
dependencies = ["child-project=={{ version }}"]
